# hyperliquid-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: builder-fees.md  configuration.md  examples.md  tools-reference.md
src/: agent.rs  cache.rs  config.rs  hyperliquid.rs  main.rs  server.rs  state.rs  ws.rs
src/tools/: account.rs  market.rs  mod.rs  trading.rs  transfer.rs  vault.rs
