[package]
name = "hyperliquid-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for trading on Hyperliquid via AI agents"
license = "MIT"
repository = "https://github.com/0xikalgo/hyperliquid-mcp"
homepage = "https://github.com/0xikalgo/hyperliquid-mcp"
readme = "README.md"
keywords = ["hyperliquid", "mcp", "trading", "defi", "ai-agent"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "hyperliquid-mcp"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.1", features = ["signers", "signer-local", "sol-types", "dyn-abi"] }
anyhow = "1"
chrono = "0.4"
dirs = "6"
dotenvy = "0.15"
either = "1"
futures = "0.3"
hypersdk = "0.2"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
rmp-serde = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
